--- a/Movie_Recommendation_Systems.ipynb
+++ b/Movie_Recommendation_Systems.ipynb
@@ -4102,7 +4102,7 @@
     "id": "08dezW5P6O1Z"
    },
    "source": [
-    "### Compare the results from the baseline user-user and item-item models\n",
+    "### **Compare the results from the baseline user-user and item-item models**\n",
     "From the K-Fold Cross-Validation model evaluation outputs, we can observe that:\n",
     "- Using precision and recall: KNN USER-USER model outperforms KNN ITEM-ITEM model.\n",
     "- Using rmse: KNN USER-USER model (RMSE=0.9935) also outperforms KNN ITEM-ITEM model (RMSE=0.9940)."
@@ -4112,7 +4112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compare the results from the tuned user-user and item-item models\n",
+    "### **Compare the results from the tuned user-user and item-item models**\n",
     "- KNN USER-USER model: \n",
     "  - In terms of RMSE, the tuned model performs better than the baseline model (0.9865 < 0.9935).\n",
     "  - In terms of precision and recall, the tuned model has higher recall than the baseline model, indicating that the tuned model is able to recommend more relevant movies.\n",
@@ -4126,13 +4126,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final remarks\n",
+    "### **Final remarks**\n",
     "\n",
-    "#### Describe the difference between Matrix Factorization and Collaborative Filtering\n",
+    "#### **Describe the difference between Matrix Factorization and Collaborative Filtering**\n",
     "- Collaborative Filtering: Based on the similarity between users or items, the K-Nearest-Neighbors algorithm tries to recommend items that similar users like or that similar items share.   \n",
     "- Matrix Factorization: Given the user-item interaction matrix, the Matrix-Factorization algorithm tries to decompose the original matrix into the product of lower-dimensional matrices, with the aim of extracting the latent features.\n",
     "\n",
-    "#### Compare the model performance (RMSE, Precision, Recall)\n",
+    "#### **Compare the model performance (RMSE, Precision, Recall)**\n",
     "- MF USER-ITEM model achieves the lowest RMSE of around 0.89.\n",
     "- MF USER-ITEM model has higher precision and recall than KNN ITEM-ITEM model, but lower precision and recall than KNN USER-USER model."
    ]
@@ -4159,7 +4159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
